@@ -1,3 +1,8 @@
+2024-03-18  Bjarni Ingi Gislason  <bjarniig@simnet.is>
+
+	* bibtex.man: \e, etc., updates.
+	https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1039975
+
 2024-03-13  Andreas Scherer  <https://ascherer.github.io>
 
 	* cweb.man: Post-release fix of typo in date string.
